--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: blog-runner
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
