--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: '14' # 適切なNode.jsバージョンを指定
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Build Next.js app
         run: npm run build
       - name: Start Next.js app
